<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="110dp"
        android:layout_height="150dp"
        android:layout_margin="5dp">
        <ImageView
            android:id="@+id/cover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/cover"
            android:scaleType="fitXY" />
        <ImageView
            android:id="@+id/icon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="start"
            android:contentDescription="@string/icon"
            android:scaleType="fitXY" />
        <ImageView
            android:id="@+id/state"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_selected"
            app:tint="@android:color/holo_green_dark"
            android:layout_gravity="end"
            android:contentDescription="@string/state"
            android:visibility="gone" />
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="5dp"
            android:textStyle="bold"
            android:textSize="11sp"
            android:textColor="@color/white"
            android:gravity="center" />
    </com.google.android.material.card.MaterialCardView>
</layout>